HDPI-6221: review changes refactoring reused code